--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "author": "Debopriya_Bhattachar <122197062+rohan17ghy@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/dotenv-flow": "^3.3.3",
+    "@types/pixelmatch": "^5.2.6",
+    "@types/pngjs": "^6.0.5",
     "@types/puppeteer": "^7.0.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/chrome-remote-interface": "^0.31.14",
+    "chrome-remote-interface": "^0.33.0",
+    "dotenv-flow": "^4.1.0",
+    "pixelmatch": "^5.3.0",
     "puppeteer": "^22.7.1"
   }
 }
