--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Debopriya_Bhattachar <122197062+rohan17ghy@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv-flow": "^3.3.3",
     "@types/pixelmatch": "^5.2.6",
     "@types/pngjs": "^6.0.5",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@types/chrome-remote-interface": "^0.31.14",
+    "axios": "^1.7.2",
     "chrome-remote-interface": "^0.33.0",
     "dotenv-flow": "^4.1.0",
     "pixelmatch": "^5.3.0",
