Added the feature to get the Best Strike price based on first candle in BankNifty
Added the feature to get the Best Strike price based on first candle in BankNifty

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-#Browser WebSocket URL
+
+#Exisitng issue: localhost in URL doesn't work -> https://github.com/puppeteer/puppeteer/issues/8873
+#Use 127.0.0.1 instead of localhost
 BROWSER_WEB_SOCKET_DEBUGGER_URL = "URL"
+PREMIUM_LOW = 400
+PREMIUM_HIGH = 800
+TIMEOUT = 90000
