Displaying ATM to ITM strikes for a previous trading day in 1min
Displaying ATM to ITM strikes for a previous trading day in 1min

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 
 #Exisitng issue: localhost in URL doesn't work -> https://github.com/puppeteer/puppeteer/issues/8873
 #Use 127.0.0.1 instead of localhost
-BROWSER_WEB_SOCKET_DEBUGGER_URL = "URL"
+BROWSER_WEB_SOCKET_DEBUGGER_URL = "ws://127.0.0.1:9222/devtools/browser/e461ed73-8fe5-4d94-aa91-824d6f73934a"
+EDGE_PATH = "C:\\Program Files (x86)\\Microsoft\\Edge\\Application\\msedge.exe"
 PREMIUM_LOW = 400
 PREMIUM_HIGH = 800
 TIMEOUT = 90000
