Adding darkMode theme for gocharting
Adding darkMode theme for gocharting

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ EDGE_PATH = "C:\\Program Files (x86)\\Microsoft\\Edge\\Application\\msedge.exe"
 PREMIUM_LOW = 400
 PREMIUM_HIGH = 800
 TIMEOUT = 90000
+DARK_MODE = true
+ZOOM = 67%
