--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^9.4.0",
     "eslint-plugin-import": "^2.29.1",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.4",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@types/chrome-remote-interface": "^0.31.14",
